Middle Part End

--- a/index.html
+++ b/index.html
@@ -39,7 +39,212 @@
         </div>
     </header>
     <!-- End Header  -->
+    <!-- Start Middle Section  -->
+    <section>
+        <h2 class="section-title">Popular Collection</h2>
+        <div class="grid-container">
+            <div class="grid-cell-container">
+                <div class="product-img">
+                    <img src="images/tripod.png" alt="">
+                </div>
+                <div class="product-details">
+                    <h4 class="product-name">Flex Tripod</h4>
+                    <p class="product-price">$50.48</p>
+                    <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="point-rating">5.00</span>
+                    </div>
+                    <div class="shifting-info">
+                        <p class="shifting">Worldwide shifting</p>
+                        <p class="shifting">available</p>
+                        <p class="shifting">Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-cell-container">
+                <div class="product-img">
+                    <img src="images/tripod.png" alt="">
+                </div>
+                <div class="product-details">
+                    <h4 class="product-name">Flex Tripod</h4>
+                    <p class="product-price">$50.48</p>
+                    <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="point-rating">5.00</span>
+                    </div>
+                    <div class="shifting-info">
+                        <p class="shifting">Worldwide shifting</p>
+                        <p class="shifting">available</p>
+                        <p class="shifting">Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-cell-container">
+                <div class="product-img">
+                    <img src="images/tripod.png" alt="">
+                </div>
+                <div class="product-details">
+                    <h4 class="product-name">Flex Tripod</h4>
+                    <p class="product-price">$50.48</p>
+                    <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="point-rating">5.00</span>
+                    </div>
+                    <div class="shifting-info">
+                        <p class="shifting">Worldwide shifting</p>
+                        <p class="shifting">available</p>
+                        <p class="shifting">Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-cell-container">
+                <div class="product-img">
+                    <img src="images/tripod.png" alt="">
+                </div>
+                <div class="product-details">
+                    <h4 class="product-name">Flex Tripod</h4>
+                    <p class="product-price">$50.48</p>
+                    <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="point-rating">5.00</span>
+                    </div>
+                    <div class="shifting-info">
+                        <p class="shifting">Worldwide shifting</p>
+                        <p class="shifting">available</p>
+                        <p class="shifting">Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-cell-container">
+                <div class="product-img">
+                    <img src="images/tripod.png" alt="">
+                </div>
+                <div class="product-details">
+                    <h4 class="product-name">Flex Tripod</h4>
+                    <p class="product-price">$50.48</p>
+                    <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="point-rating">5.00</span>
+                    </div>
+                    <div class="shifting-info">
+                        <p class="shifting">Worldwide shifting</p>
+                        <p class="shifting">available</p>
+                        <p class="shifting">Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-cell-container">
+                <div class="product-img">
+                    <img src="images/tripod.png" alt="">
+                </div>
+                <div class="product-details">
+                    <h4 class="product-name">Flex Tripod</h4>
+                    <p class="product-price">$50.48</p>
+                    <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="point-rating">5.00</span>
+                    </div>
+                    <div class="shifting-info">
+                        <p class="shifting">Worldwide shifting</p>
+                        <p class="shifting">available</p>
+                        <p class="shifting">Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-cell-container">
+                <div class="product-img">
+                    <img src="images/tripod.png" alt="">
+                </div>
+                <div class="product-details">
+                    <h4 class="product-name">Flex Tripod</h4>
+                    <p class="product-price">$50.48</p>
+                    <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="point-rating">5.00</span>
+                    </div>
+                    <div class="shifting-info">
+                        <p class="shifting">Worldwide shifting</p>
+                        <p class="shifting">available</p>
+                        <p class="shifting">Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-cell-container">
+                <div class="product-img">
+                    <img src="images/tripod.png" alt="">
+                </div>
+                <div class="product-details">
+                    <h4 class="product-name">Flex Tripod</h4>
+                    <p class="product-price">$50.48</p>
+                    <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="point-rating">5.00</span>
+                    </div>
+                    <div class="shifting-info">
+                        <p class="shifting">Worldwide shifting</p>
+                        <p class="shifting">available</p>
+                        <p class="shifting">Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="grid-cell-container">
+                <div class="product-img">
+                    <img src="images/tripod.png" alt="">
+                </div>
+                <div class="product-details">
+                    <h4 class="product-name">Flex Tripod</h4>
+                    <p class="product-price">$50.48</p>
+                    <div class="rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="point-rating">5.00</span>
+                    </div>
+                    <div class="shifting-info">
+                        <p class="shifting">Worldwide shifting</p>
+                        <p class="shifting">available</p>
+                        <p class="shifting">Buyers protection possible!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <!-- End Middle Part -->
 </body>
 
 </html>
