--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     ipsum dolor sit amet consectetur adipisicing elit. Quisquam, magnam. lorem100</small>
             </p>
             <div class="booking-button">
-                <a href=""><small>Preebook now <i class="fas fa-long-arrow-alt-right"></i></small></a>
+                <a href=""><small>Preebook now <i class="fas fa-arrow-right"></i></small></a>
 
             </div>
 
@@ -67,11 +67,11 @@
             </div>
             <div class="grid-cell-container">
                 <div class="product-img">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/mic.png" alt="">
                 </div>
                 <div class="product-details">
-                    <h4 class="product-name">Flex Tripod</h4>
-                    <p class="product-price">$50.48</p>
+                    <h4 class="product-name">Microphone</h4>
+                    <p class="product-price">$120.25</p>
                     <div class="rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -89,11 +89,11 @@
             </div>
             <div class="grid-cell-container">
                 <div class="product-img">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/airpod.png" alt="">
                 </div>
                 <div class="product-details">
-                    <h4 class="product-name">Flex Tripod</h4>
-                    <p class="product-price">$50.48</p>
+                    <h4 class="product-name">Airbuds</h4>
+                    <p class="product-price">100.00</p>
                     <div class="rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -111,11 +111,11 @@
             </div>
             <div class="grid-cell-container">
                 <div class="product-img">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/drone.png" alt="">
                 </div>
                 <div class="product-details">
-                    <h4 class="product-name">Flex Tripod</h4>
-                    <p class="product-price">$50.48</p>
+                    <h4 class="product-name">Drone</h4>
+                    <p class="product-price">$980.25</p>
                     <div class="rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -133,11 +133,11 @@
             </div>
             <div class="grid-cell-container">
                 <div class="product-img">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/lights.png" alt="">
                 </div>
                 <div class="product-details">
-                    <h4 class="product-name">Flex Tripod</h4>
-                    <p class="product-price">$50.48</p>
+                    <h4 class="product-name">Light Setuo</h4>
+                    <p class="product-price">$1200.00</p>
                     <div class="rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -155,11 +155,11 @@
             </div>
             <div class="grid-cell-container">
                 <div class="product-img">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/setup.png" alt="">
                 </div>
                 <div class="product-details">
-                    <h4 class="product-name">Flex Tripod</h4>
-                    <p class="product-price">$50.48</p>
+                    <h4 class="product-name">Photoshoot set</h4>
+                    <p class="product-price">$820.40</p>
                     <div class="rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -177,11 +177,11 @@
             </div>
             <div class="grid-cell-container">
                 <div class="product-img">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/camera.png" alt="">
                 </div>
                 <div class="product-details">
-                    <h4 class="product-name">Flex Tripod</h4>
-                    <p class="product-price">$50.48</p>
+                    <h4 class="product-name">Vlogging Camera</h4>
+                    <p class="product-price">$1800.80</p>
                     <div class="rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -199,11 +199,11 @@
             </div>
             <div class="grid-cell-container">
                 <div class="product-img">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/single-light.png" alt="">
                 </div>
                 <div class="product-details">
-                    <h4 class="product-name">Flex Tripod</h4>
-                    <p class="product-price">$50.48</p>
+                    <h4 class="product-name">Green Screen</h4>
+                    <p class="product-price">$25.48</p>
                     <div class="rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -221,11 +221,11 @@
             </div>
             <div class="grid-cell-container">
                 <div class="product-img">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/action.png" alt="">
                 </div>
                 <div class="product-details">
-                    <h4 class="product-name">Flex Tripod</h4>
-                    <p class="product-price">$50.48</p>
+                    <h4 class="product-name">Action Camera</h4>
+                    <p class="product-price">$380.00</p>
                     <div class="rating">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -242,9 +242,29 @@
                 </div>
             </div>
         </div>
+        <div class="more-info">
+            <a href="https://www.google.com/"><small>See More <i class="fas fa-arrow-right"></i></small></a>
+        </div>
+
     </section>
 
     <!-- End Middle Part -->
+
+    <!-- Start Footer  -->
+
+    <footer>
+        <h3>Influencer products</h3>
+        <div>
+            <p><small>Copyiright <i class="far fa-copyright"></i> influencer products</small></p>
+            <p><small>All rights reserved</small></p>
+            <a href=""><i class="media-padding fab fa-twitter"></i></a>
+            <a href=""><i class="media-padding fab fa-instagram"></i></a>
+            <a href=""><i class="media-padding fab fa-whatsapp"></i></a>
+            <a href=""><i class="fab fa-youtube"></i></a>
+        </div>
+    </footer>
+
+    <!-- End Footer  -->
 </body>
 
 </html>
