--- a/index.html
+++ b/index.html
@@ -250,6 +250,25 @@
 
     <!-- End Middle Part -->
 
+    <!--This is Extra Part  -->
+    <section class="extra-part">
+        <div class="extra-part-container">
+            <div class="img-side image-area">
+                <img src="images/player-1.png" alt="Shop Owner">
+            </div>
+            <article class="our-info text-area">
+                <h2>About Us</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto esse voluptatem sit eos corrupti
+                    voluptates quis nemo tenetur unde totam.</p>
+            </article>
+
+        </div>
+
+    </section>
+
+
+    <!-- End Extra Part  -->
+
     <!-- Start Footer  -->
 
     <footer>
@@ -257,10 +276,10 @@
         <div>
             <p><small>Copyiright <i class="far fa-copyright"></i> influencer products</small></p>
             <p><small>All rights reserved</small></p>
-            <a href=""><i class="media-padding fab fa-twitter"></i></a>
-            <a href=""><i class="media-padding fab fa-instagram"></i></a>
-            <a href=""><i class="media-padding fab fa-whatsapp"></i></a>
-            <a href=""><i class="fab fa-youtube"></i></a>
+            <a class="fa-icon" href=""><i class="media-padding fab fa-instagram"></i></a>
+            <a class="fa-icon" href=""><i class="media-padding fab fa-twitter"></i></a>
+            <a class="fa-icon" href=""><i class="media-padding fab fa-whatsapp"></i></a>
+            <a class="fa-icon" href=""><i class="fab fa-youtube"></i></a>
         </div>
     </footer>
 
