--- a/index.html
+++ b/index.html
@@ -242,11 +242,12 @@
                 </div>
             </div>
         </div>
-        <div class="more-info">
-            <a href="https://www.google.com/"><small>See More <i class="fas fa-arrow-right"></i></small></a>
-        </div>
-
     </section>
+    <div class="more-info">
+        <a href="https://www.google.com/"><small>See More <i class="fas fa-arrow-right"></i></small></a>
+    </div>
+
+
 
     <!-- End Middle Part -->
 
@@ -260,7 +261,8 @@
             </div>
             <article class="our-info text-area">
                 <h2>About Us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto esse voluptatem sit eos corrupti
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto esse voluptatem sit eos
+                    corrupti
                     voluptates quis nemo tenetur unde totam.</p>
             </article>
 
