--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
             <h2>Start your Journey as
                 Influencer</h2>
-            <p><small>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non. Lorem ipsum dolor sit amet.
-                    Lorem,
-                    ipsum dolor sit amet consectetur adipisicing elit. Quisquam, magnam. lorem100</small>
+            <p><small>These days, though, anyone can become an influencer on social media, as long as they spend some
+                    time learning how to become a social media influencer and then put the work in. There are now
+                    nano influencers and micro celebrities, people at the top of their highly specialized field.</small>
             </p>
             <div class="booking-button">
                 <a href=""><small>Preebook now <i class="fas fa-arrow-right"></i></small></a>
@@ -248,7 +248,6 @@
     </div>
 
 
-
     <!-- End Middle Part -->
 
     <!--This is Extra Part  -->
@@ -261,9 +260,9 @@
             </div>
             <article class="our-info text-area">
                 <h2>About Us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto esse voluptatem sit eos
-                    corrupti
-                    voluptates quis nemo tenetur unde totam.</p>
+                <p>We care about you. We try to give you the best product. We give you assurance you are getting the
+                    best product in a reasonable price that will last for a long time and will be given you the best
+                    performance.</p>
             </article>
 
         </div>
